update about page and home page

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 					<a href="#" class="view-all">View All →</a>
 				</div>
 			</div>
-			<div class="coffee-item">
+			<div class="coffee-item coffee-item-reverse">
 				<div class="coffee-image">
 					<img
 						src="https://media.istockphoto.com/id/814684194/photo/coffee-beans-and-hot-cofee-cup-with-latte-art-on-wooden-background-side-view-with-copy-space.jpg?s=170667a&w=0&k=20&c=MLDjP4PndUT7rz8zRDmST3-tBgxhPdZXmOZ3jAeIcdY="
 						alt="Coffee Heaven"
 					/>
 				</div>
-				<div class="coffee-content reverse">
+				<div class="coffee-content">
 					<h2>Jean's Coffee</h2>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
@@ -115,32 +115,53 @@
 			<div class="coffee-grid">
 				<!-- Cappuccino Card -->
 				<div class="coffee-card">
-					<img
-						src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-						alt="Cappuccino"
-					/>
-					<h3>Cappuccino</h3>
-					<a href="#" class="order-btn">Order Now</a>
+					<div class="card-top"></div>
+					<div class="card-middle">
+						<h3>Cappuccino</h3>
+					</div>
+					<div class="card-bottom">
+						<h3>Order Now</h3>
+					</div>
+					<div class="card-image">
+						<img
+							src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
+							alt="Cappuccino"
+						/>
+					</div>
 				</div>
 
 				<!-- Americano Card -->
 				<div class="coffee-card">
-					<img
-						src="https://www.mysticmonkcoffee.com/cdn/shop/articles/americano_coffee_1024x.png?v=1706611607"
-						alt="Americano"
-					/>
-					<h3>Americano</h3>
-					<a href="#" class="order-btn">Order Now</a>
+					<div class="card-top"></div>
+					<div class="card-middle">
+						<h3>Americano</h3>
+					</div>
+					<div class="card-bottom">
+						<h3>Order Now</h3>
+					</div>
+					<div class="card-image">
+						<img
+							src="https://www.mysticmonkcoffee.com/cdn/shop/articles/americano_coffee_1024x.png?v=1706611607"
+							alt="Americano"
+						/>
+					</div>
 				</div>
 
 				<!-- Espresso Card -->
 				<div class="coffee-card">
-					<img
-						src="https://www.nestleprofessional.in/sites/default/files/2021-08/Espresso_0.jpg"
-						alt="Espresso"
-					/>
-					<h3>Espresso</h3>
-					<a href="#" class="order-btn">Order Now</a>
+					<div class="card-top"></div>
+					<div class="card-middle">
+						<h3>Espresso</h3>
+					</div>
+					<div class="card-bottom">
+						<h3>Order Now</h3>
+					</div>
+					<div class="card-image">
+						<img
+							src="https://www.nestleprofessional.in/sites/default/files/2021-08/Espresso_0.jpg"
+							alt="Espresso"
+						/>
+					</div>
 				</div>
 			</div>
 
