update top categories

--- a/products.html
+++ b/products.html
@@ -26,30 +26,35 @@
 			</div>
 		</nav>
 
-		<!-- Hero Section with Quick Categories -->
-		<section class="quick-categories" style="background-color: #f5ebe0">
-			<h2 class="product-section-title">Our Categories</h2>
-			<div class="category-container">
-				<div class="category-item">
-					<img
-						src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-						alt="Fast Delivery"
-					/>
-					<h3>Fast Delivery</h3>
+		<!-- Top Categories -->
+		<section class="top-categories">
+			<h2 class="section-title">TOP CATEGORIES</h2>
+			<p class="section-subtitle">
+				Explore The Recent Most Bought Drinks This Week
+			</p>
+			<div class="categories-grid">
+				<div class="category-card">
+					<img src="/images/image1.png" alt="Coffee Mocha" />
+					<div class="category-content">
+						<h3>Coffee Mocha</h3>
+						<a href="#" class="view-more">View More</a>
+					</div>
 				</div>
-				<div class="category-item">
-					<img
-						src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-						alt="Fresh Food"
-					/>
-					<h3>Fresh Food</h3>
+
+				<div class="category-card">
+					<img src="/images/image2.png" alt="Expresso Americano" />
+					<div class="category-content">
+						<h3>Expresso Americano</h3>
+						<a href="#" class="view-more">View More</a>
+					</div>
 				</div>
-				<div class="category-item">
-					<img
-						src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-						alt="Quality"
-					/>
-					<h3>Best Quality</h3>
+
+				<div class="category-card">
+					<img src="/images/images3.png" alt="Cappuccino" />
+					<div class="category-content">
+						<h3>Cappuccino</h3>
+						<a href="#" class="view-more">View More</a>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -64,76 +69,88 @@
 			</h2>
 			<div class="category-grid">
 				<div class="category-card">
-					<img
-						src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-						alt="Category 1"
-					/>
-					<button class="product-order-btn">Order</button>
+					<span class="likes">30 likes</span>
+					<img src="/images/image1.png" alt="Shake Name" />
+					<h3>Mocha Shake</h3>
+					<p class="price">$20.00</p>
+					<button class="product-order-btn">BUY NOW</button>
 				</div>
 				<div class="category-card">
-					<img
-						src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-						alt="Category 2"
-					/>
-					<button class="product-order-btn">Order</button>
+					<span class="likes">30 likes</span>
+					<img src="/images/image2.png" alt="Shake Name" />
+					<h3>Mocha Shake</h3>
+					<p class="price">$20.00</p>
+					<button class="product-order-btn">BUY NOW</button>
 				</div>
 				<div class="category-card">
-					<img
-						src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-						alt="Category 3"
-					/>
-					<button class="product-order-btn">Order</button>
+					<span class="likes">30 likes</span>
+					<img src="/images/image2.png" alt="Shake Name" />
+					<h3>Mocha Shake</h3>
+					<p class="price">$20.00</p>
+					<button class="product-order-btn">BUY NOW</button>
 				</div>
 			</div>
 		</section>
 
 		<!-- Regular Menu -->
 		<section class="regular-menu" style="background-color: #f5ebe0">
-			<h2 class="product-section-title">Regular Menu</h2>
+			<h2 class="product-section-title">Enjoy a new blend of coffee style</h2>
+			<p class="menu-description">
+				Explore all flavours of coffee with us. There is always a new cup worth
+				experiencing
+			</p>
 			<div class="product-grid">
+				<!-- Cappuccino -->
 				<div class="product-card">
 					<div class="product-image">
-						<img
-							src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-							alt="Product 1"
-						/>
-						<span class="product-tag">Pic</span>
+						<img src="/images/image1.png" alt="Cappuccino" />
 					</div>
 					<div class="product-info">
-						<h3>Product Name</h3>
-						<p class="price">$XX.XX</p>
-						<button class="product-order-btn">Order</button>
+						<h3>Cappuccino</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
 					</div>
 				</div>
+
+				<!-- Chai Latte -->
 				<div class="product-card">
 					<div class="product-image">
-						<img
-							src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-							alt="Product 1"
-						/>
-						<span class="product-tag">Pic</span>
+						<img src="/images/image2.png" alt="Chai Latte" />
 					</div>
 					<div class="product-info">
-						<h3>Product Name</h3>
-						<p class="price">$XX.XX</p>
-						<button class="product-order-btn">Order</button>
+						<h3>Chai Latte</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
 					</div>
 				</div>
+
+				<!-- Macchiato -->
 				<div class="product-card">
 					<div class="product-image">
-						<img
-							src="https://lorcoffee.com/cdn/shop/articles/Cappuccino-exc.jpg?v=1684870907"
-							alt="Product 1"
-						/>
-						<span class="product-tag">Pic</span>
+						<img src="/images/images3.png    " alt="Macchiato" />
 					</div>
 					<div class="product-info">
-						<h3>Product Name</h3>
-						<p class="price">$XX.XX</p>
-						<button class="product-order-btn">Order</button>
+						<h3>Macchiato</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
 					</div>
 				</div>
-				<!-- Repeat product-card 2 more times -->
+
+				<!-- Espresso -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/images4.png" alt="Espresso" />
+					</div>
+					<div class="product-info">
+						<h3>Espresso</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
 			</div>
 		</section>
 
