--- a/products.html
+++ b/products.html
@@ -69,25 +69,37 @@
 			</h2>
 			<div class="category-grid">
 				<div class="category-card">
-					<span class="likes">30 likes</span>
-					<img src="/images/image1.png" alt="Shake Name" />
-					<h3>Mocha Shake</h3>
-					<p class="price">$20.00</p>
-					<button class="product-order-btn">BUY NOW</button>
+					<div class="likes">👍 30 likes</div>
+					<img src="/images/image1.png" alt="Mocha Shake" />
+					<div class="card-content">
+						<h3>Mocha Shake</h3>
+						<div class="price-action">
+							<p class="price">$20.00</p>
+							<button>BUY NOW</button>
+						</div>
+					</div>
 				</div>
 				<div class="category-card">
-					<span class="likes">30 likes</span>
-					<img src="/images/image2.png" alt="Shake Name" />
-					<h3>Mocha Shake</h3>
-					<p class="price">$20.00</p>
-					<button class="product-order-btn">BUY NOW</button>
+					<div class="likes">👍 30 likes</div>
+					<img src="/images/image2.png" alt="Mocha Shake" />
+					<div class="card-content">
+						<h3>Mocha Shake</h3>
+						<div class="price-action">
+							<p class="price">$20.00</p>
+							<button>BUY NOW</button>
+						</div>
+					</div>
 				</div>
 				<div class="category-card">
-					<span class="likes">30 likes</span>
-					<img src="/images/image2.png" alt="Shake Name" />
-					<h3>Mocha Shake</h3>
-					<p class="price">$20.00</p>
-					<button class="product-order-btn">BUY NOW</button>
+					<div class="likes">👍 30 likes</div>
+					<img src="/images/images3.png" alt="Mocha Shake" />
+					<div class="card-content">
+						<h3>Mocha Shake</h3>
+						<div class="price-action">
+							<p class="price">$20.00</p>
+							<button>BUY NOW</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -100,6 +112,108 @@
 				experiencing
 			</p>
 			<div class="product-grid">
+				<!-- Cappuccino -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/image1.png" alt="Cappuccino" />
+					</div>
+					<div class="product-info">
+						<h3>Cappuccino</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
+
+				<!-- Chai Latte -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/image2.png" alt="Chai Latte" />
+					</div>
+					<div class="product-info">
+						<h3>Chai Latte</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
+
+				<!-- Macchiato -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/images3.png    " alt="Macchiato" />
+					</div>
+					<div class="product-info">
+						<h3>Macchiato</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
+
+				<!-- Espresso -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/images4.png" alt="Espresso" />
+					</div>
+					<div class="product-info">
+						<h3>Espresso</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
+				<!-- Cappuccino -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/image1.png" alt="Cappuccino" />
+					</div>
+					<div class="product-info">
+						<h3>Cappuccino</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
+
+				<!-- Chai Latte -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/image2.png" alt="Chai Latte" />
+					</div>
+					<div class="product-info">
+						<h3>Chai Latte</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
+
+				<!-- Macchiato -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/images3.png    " alt="Macchiato" />
+					</div>
+					<div class="product-info">
+						<h3>Macchiato</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
+
+				<!-- Espresso -->
+				<div class="product-card">
+					<div class="product-image">
+						<img src="/images/images4.png" alt="Espresso" />
+					</div>
+					<div class="product-info">
+						<h3>Espresso</h3>
+						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
+						<p class="price">$8.50</p>
+						<button class="product-order-btn">Order Now</button>
+					</div>
+				</div>
 				<!-- Cappuccino -->
 				<div class="product-card">
 					<div class="product-image">
