fix top categoies

--- a/about.html
+++ b/about.html
@@ -11,16 +11,11 @@
 		<!-- Navigation (Same as index.html) -->
 		<nav class="navbar">
 			<div class="logo">Caffeine</div>
-			<div class="hamburger">
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
 			<ul class="nav-menu">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#">Menu</a></li>
-				<li><a href="about.html" class="active">About Us</a></li>
-				<li><a href="#">Facilities</a></li>
+				<li><a href="products.html">Products</a></li>
+				<li><a href="#" class="active">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="nav-right">
 				<a href="#" class="sign-in">Sign In</a>
