--- a/products.html
+++ b/products.html
@@ -5,20 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Products - Coffee Shop</title>
 		<link rel="stylesheet" href="/styles/main.css" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
-			rel="stylesheet"
-		/>
 	</head>
 	<body>
 		<!-- Navigation -->
 		<nav class="navbar">
 			<div class="logo">Caffeine</div>
 			<ul class="nav-menu">
-				<li><a href="#" class="active">Home</a></li>
-				<li><a href="#">Menu</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="#">Facilities</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="#" class="active">Products</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="nav-right">
 				<a href="#" class="sign-in">Sign In</a>
@@ -269,17 +265,26 @@
 		</section>
 
 		<!-- Promotions -->
-		<section class="promotions" style="background-color: #1a0f0f; color: white">
-			<h2 class="product-section-title" style="color: white">Special Offers</h2>
+		<section class="promotions">
+			<h2 class="section-title">Special Offers</h2>
 			<div class="promo-grid">
 				<div class="promo-card">
+					<span class="promo-label">Limited Time</span>
 					<h3>25% Discount</h3>
+					<p class="promo-desc">On all premium coffee beans</p>
+					<span class="promo-icon">🎉</span>
 				</div>
 				<div class="promo-card">
+					<span class="promo-label">Member Special</span>
 					<h3>Save $50</h3>
+					<p class="promo-desc">On orders above $200</p>
+					<span class="promo-icon">💎</span>
 				</div>
 				<div class="promo-card">
+					<span class="promo-label">Weekend Deal</span>
 					<h3>15% Off</h3>
+					<p class="promo-desc">On specialty drinks</p>
+					<span class="promo-icon">✨</span>
 				</div>
 			</div>
 		</section>
