--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			<div class="logo">Caffeine</div>
 			<ul class="nav-menu">
 				<li><a href="#" class="active">Home</a></li>
-				<li><a href="#">Menu</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="#">Facilities</a></li>
+				<li><a href="products.html">Products</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="nav-right">
 				<a href="#" class="sign-in">Sign In</a>
