--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>About Us - Caffeine Coffee Shop</title>
 		<link rel="stylesheet" href="styles/main.css" />
-		<link rel="stylesheet" href="styles/responsive.css" />
 	</head>
 	<body>
 		<!-- Navigation (Same as index.html) -->
@@ -18,7 +17,8 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="nav-right">
-				<a href="#" class="sign-in">Sign In</a>
+				<a href="signup.html" class="sign-in">Sign Up</a>
+				<span class="divider">|</span>
 				<span class="search">🔍</span>
 			</div>
 		</nav>
@@ -35,10 +35,11 @@
 				<div class="showcase-description">
 					<h2>Our Coffee Story</h2>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-						eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-						ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-						aliquip ex ea commodo consequat.
+						Our journey began with a simple dream: to bring people together over
+						a perfect cup of coffee. From sourcing the finest beans to mastering
+						the art of brewing, we’ve dedicated ourselves to creating an
+						experience that’s as warm and inviting as the coffee we serve. Every
+						cup tells a tale of passion, tradition, and love for the craft.
 					</p>
 				</div>
 			</div>
@@ -80,7 +81,7 @@
 			</div>
 		</section>
 		<!-- Team Section -->
-		<section class="team-section">
+		<section class="team-section" id="team">
 			<h2 class="section-title">Our Team</h2>
 			<div class="team-grid">
 				<!-- Team Member 1 -->
@@ -95,8 +96,10 @@
 							<h3>John Smith</h3>
 							<span class="member-role">Head Barista</span>
 							<p class="member-bio">
-								Coffee enthusiast with 10+ years of experience in specialty
-								brewing
+								A passionate coffee expert with over a decade of experience in
+								crafting exceptional brews, John brings creativity and precision
+								to every cup. His dedication to the art of coffee inspires both
+								the team and our customers.
 							</p>
 							<div class="social-links">
 								<a href="#" aria-label="Facebook"
@@ -120,12 +123,15 @@
 							class="member-image"
 						/>
 						<div class="member-info">
-							<h3>John Smith</h3>
-							<span class="member-role">Head Barista</span>
+							<h3>Emily Brown</h3>
+							<span class="member-role">Pastry Chef</span>
 							<p class="member-bio">
-								Coffee enthusiast with 10+ years of experience in specialty
-								brewing
+								With a talent for pairing delightful pastries with the perfect
+								coffee, Emily brings sweetness to every visit. Her passion for
+								creating mouthwatering treats makes her a favorite among our
+								guests.
 							</p>
+
 							<div class="social-links">
 								<a href="#" aria-label="Facebook"
 									><i class="fab fa-facebook-f"></i
@@ -149,11 +155,13 @@
 							class="member-image"
 						/>
 						<div class="member-info">
-							<h3>John Smith</h3>
-							<span class="member-role">Head Barista</span>
+							<h3>Michael Davis</h3>
+							<span class="member-role">Roasting Specialist</span>
 							<p class="member-bio">
-								Coffee enthusiast with 10+ years of experience in specialty
-								brewing
+								Michael ensures that every bean is roasted to perfection,
+								unlocking its full potential. His expertise in roasting
+								guarantees that each cup of coffee delivers a rich, flavorful
+								experience.
 							</p>
 							<div class="social-links">
 								<a href="#" aria-label="Facebook"
@@ -183,7 +191,10 @@
 					/>
 
 					<h3>Free Shipping</h3>
-					<p>Free shipping on all orders</p>
+					<p>
+						Enjoy free shipping on all orders, delivered straight to your door
+						with care.
+					</p>
 				</div>
 
 				<div class="service-item">
@@ -191,8 +202,11 @@
 						src="https://media.istockphoto.com/id/814684194/photo/coffee-beans-and-hot-cofee-cup-with-latte-art-on-wooden-background-side-view-with-copy-space.jpg?s=170667a&w=0&k=20&c=MLDjP4PndUT7rz8zRDmST3-tBgxhPdZXmOZ3jAeIcdY="
 					/>
 
-					<h3>Service Title</h3>
-					<p>Service description</p>
+					<h3>Custom Coffee Blends</h3>
+					<p>
+						Create your perfect brew with our personalized coffee blending
+						service.
+					</p>
 				</div>
 
 				<div class="service-item">
@@ -200,22 +214,13 @@
 						src="https://media.istockphoto.com/id/814684194/photo/coffee-beans-and-hot-cofee-cup-with-latte-art-on-wooden-background-side-view-with-copy-space.jpg?s=170667a&w=0&k=20&c=MLDjP4PndUT7rz8zRDmST3-tBgxhPdZXmOZ3jAeIcdY="
 					/>
 
-					<h3>Service Title</h3>
-					<p>Service description</p>
+					<h3>Premium Coffee</h3>
+					<p>
+						Enjoy freshly roasted coffee delivered to your doorstep every month
+						with our subscription service.
+					</p>
 				</div>
 			</div>
 		</section>
-
-		<!-- Footer (Same as index.html) -->
-		<footer>
-			<div class="footer-content">
-				<!-- Footer sections here -->
-			</div>
-			<div class="copyright">
-				<p>Copyright © 2023 Tophats Agency</p>
-			</div>
-		</footer>
-
-		<script src="script.js"></script>
 	</body>
 </html>
