--- a/products.html
+++ b/products.html
@@ -17,7 +17,8 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="nav-right">
-				<a href="#" class="sign-in">Sign In</a>
+				<a href="signup.html" class="sign-in">Sign Up</a>
+				<span class="divider">|</span>
 				<span class="search">🔍</span>
 			</div>
 		</nav>
@@ -65,7 +66,7 @@
 			</h2>
 			<div class="category-grid">
 				<div class="category-card">
-					<div class="likes">👍 30 likes</div>
+					<div class="likes">30 likes</div>
 					<img src="/images/image1.png" alt="Mocha Shake" />
 					<div class="card-content">
 						<h3>Mocha Shake</h3>
@@ -76,7 +77,7 @@
 					</div>
 				</div>
 				<div class="category-card">
-					<div class="likes">👍 30 likes</div>
+					<div class="likes">43 likes</div>
 					<img src="/images/image2.png" alt="Mocha Shake" />
 					<div class="card-content">
 						<h3>Mocha Shake</h3>
@@ -87,7 +88,7 @@
 					</div>
 				</div>
 				<div class="category-card">
-					<div class="likes">👍 30 likes</div>
+					<div class="likes">92 likes</div>
 					<img src="/images/images3.png" alt="Mocha Shake" />
 					<div class="card-content">
 						<h3>Mocha Shake</h3>
@@ -128,8 +129,8 @@
 					</div>
 					<div class="product-info">
 						<h3>Chai Latte</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
+						<p class="blend-ratio">Tea 60% | Milk 40%</p>
+						<p class="price" style="color: black">$5.50</p>
 						<button class="product-order-btn">Order Now</button>
 					</div>
 				</div>
@@ -141,8 +142,11 @@
 					</div>
 					<div class="product-info">
 						<h3>Macchiato</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
+						<p class="blend-ratio" style="color: black">
+							Coffee 70% | Milk 30%
+						</p>
+						<p class="price">$4.50</p>
+
 						<button class="product-order-btn">Order Now</button>
 					</div>
 				</div>
@@ -154,110 +158,11 @@
 					</div>
 					<div class="product-info">
 						<h3>Espresso</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
-						<button class="product-order-btn">Order Now</button>
-					</div>
-				</div>
-				<!-- Cappuccino -->
-				<div class="product-card">
-					<div class="product-image">
-						<img src="/images/image1.png" alt="Cappuccino" />
-					</div>
-					<div class="product-info">
-						<h3>Cappuccino</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
-						<button class="product-order-btn">Order Now</button>
-					</div>
-				</div>
+						<p class="blend-ratio" style="color: black">
+							Coffee 100% | Milk 0%
+						</p>
+						<p class="price">$3.00</p>
 
-				<!-- Chai Latte -->
-				<div class="product-card">
-					<div class="product-image">
-						<img src="/images/image2.png" alt="Chai Latte" />
-					</div>
-					<div class="product-info">
-						<h3>Chai Latte</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
-						<button class="product-order-btn">Order Now</button>
-					</div>
-				</div>
-
-				<!-- Macchiato -->
-				<div class="product-card">
-					<div class="product-image">
-						<img src="/images/images3.png    " alt="Macchiato" />
-					</div>
-					<div class="product-info">
-						<h3>Macchiato</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
-						<button class="product-order-btn">Order Now</button>
-					</div>
-				</div>
-
-				<!-- Espresso -->
-				<div class="product-card">
-					<div class="product-image">
-						<img src="/images/images4.png" alt="Espresso" />
-					</div>
-					<div class="product-info">
-						<h3>Espresso</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
-						<button class="product-order-btn">Order Now</button>
-					</div>
-				</div>
-				<!-- Cappuccino -->
-				<div class="product-card">
-					<div class="product-image">
-						<img src="/images/image1.png" alt="Cappuccino" />
-					</div>
-					<div class="product-info">
-						<h3>Cappuccino</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
-						<button class="product-order-btn">Order Now</button>
-					</div>
-				</div>
-
-				<!-- Chai Latte -->
-				<div class="product-card">
-					<div class="product-image">
-						<img src="/images/image2.png" alt="Chai Latte" />
-					</div>
-					<div class="product-info">
-						<h3>Chai Latte</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
-						<button class="product-order-btn">Order Now</button>
-					</div>
-				</div>
-
-				<!-- Macchiato -->
-				<div class="product-card">
-					<div class="product-image">
-						<img src="/images/images3.png    " alt="Macchiato" />
-					</div>
-					<div class="product-info">
-						<h3>Macchiato</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
-						<button class="product-order-btn">Order Now</button>
-					</div>
-				</div>
-
-				<!-- Espresso -->
-				<div class="product-card">
-					<div class="product-image">
-						<img src="/images/images4.png" alt="Espresso" />
-					</div>
-					<div class="product-info">
-						<h3>Espresso</h3>
-						<p class="blend-ratio">Coffee 50% | Milk 50%</p>
-						<p class="price">$8.50</p>
 						<button class="product-order-btn">Order Now</button>
 					</div>
 				</div>
@@ -288,15 +193,5 @@
 				</div>
 			</div>
 		</section>
-
-		<!-- Footer -->
-		<footer>
-			<div class="footer-content">
-				<!-- Add your footer content here -->
-			</div>
-			<div class="copyright">
-				<p>&copy; 2024 Coffee Shop. All rights reserved.</p>
-			</div>
-		</footer>
 	</body>
 </html>
