--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Products - Coffee Shop</title>
 		<link rel="stylesheet" href="styles/main.css" />
+		<link rel="stylesheet" href="styles/responsive.css" />
 	</head>
 	<body>
 		<!-- Navigation -->
