--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
 			</p>
 			<div class="categories-grid">
 				<div class="category-card">
-					<img src="/images/image1.png" alt="Coffee Mocha" />
+					<img src="./images/image1.png" alt="Coffee Mocha" />
 					<div class="category-content">
 						<h3>Coffee Mocha</h3>
 						<a href="#" class="view-more">View More</a>
@@ -39,7 +39,7 @@
 				</div>
 
 				<div class="category-card">
-					<img src="/images/image2.png" alt="Expresso Americano" />
+					<img src="./images/image2.png" alt="Expresso Americano" />
 					<div class="category-content">
 						<h3>Expresso Americano</h3>
 						<a href="#" class="view-more">View More</a>
@@ -47,7 +47,7 @@
 				</div>
 
 				<div class="category-card">
-					<img src="/images/images3.png" alt="Cappuccino" />
+					<img src="./images/images3.png" alt="Cappuccino" />
 					<div class="category-content">
 						<h3>Cappuccino</h3>
 						<a href="#" class="view-more">View More</a>
@@ -67,7 +67,7 @@
 			<div class="category-grid">
 				<div class="category-card">
 					<div class="likes">30 likes</div>
-					<img src="/images/image1.png" alt="Mocha Shake" />
+					<img src="./images/image1.png" alt="Mocha Shake" />
 					<div class="card-content">
 						<h3>Mocha Shake</h3>
 						<div class="price-action">
@@ -78,7 +78,7 @@
 				</div>
 				<div class="category-card">
 					<div class="likes">43 likes</div>
-					<img src="/images/image2.png" alt="Mocha Shake" />
+					<img src="./images/image2.png" alt="Mocha Shake" />
 					<div class="card-content">
 						<h3>Mocha Shake</h3>
 						<div class="price-action">
@@ -89,7 +89,7 @@
 				</div>
 				<div class="category-card">
 					<div class="likes">92 likes</div>
-					<img src="/images/images3.png" alt="Mocha Shake" />
+					<img src="./images/images3.png" alt="Mocha Shake" />
 					<div class="card-content">
 						<h3>Mocha Shake</h3>
 						<div class="price-action">
@@ -112,7 +112,7 @@
 				<!-- Cappuccino -->
 				<div class="product-card">
 					<div class="product-image">
-						<img src="/images/image1.png" alt="Cappuccino" />
+						<img src="./images/image1.png" alt="Cappuccino" />
 					</div>
 					<div class="product-info">
 						<h3>Cappuccino</h3>
@@ -125,7 +125,7 @@
 				<!-- Chai Latte -->
 				<div class="product-card">
 					<div class="product-image">
-						<img src="/images/image2.png" alt="Chai Latte" />
+						<img src="./images/image2.png" alt="Chai Latte" />
 					</div>
 					<div class="product-info">
 						<h3>Chai Latte</h3>
@@ -138,7 +138,7 @@
 				<!-- Macchiato -->
 				<div class="product-card">
 					<div class="product-image">
-						<img src="/images/images3.png    " alt="Macchiato" />
+						<img src="./images/images3.png    " alt="Macchiato" />
 					</div>
 					<div class="product-info">
 						<h3>Macchiato</h3>
@@ -154,7 +154,7 @@
 				<!-- Espresso -->
 				<div class="product-card">
 					<div class="product-image">
-						<img src="/images/images4.png" alt="Espresso" />
+						<img src="./images/images4.png" alt="Espresso" />
 					</div>
 					<div class="product-info">
 						<h3>Espresso</h3>
