--- a/signup.html
+++ b/signup.html
@@ -71,7 +71,7 @@
 			</div>
 
 			<div class="signup-image-section">
-				<img src="./images/image1.png" alt="Coffee Art" class="coffee-image" />
+				<img src="/images/image1.png" alt="Coffee Art" class="coffee-image" />
 			</div>
 		</div>
 	</body>
