--- a/products.html
+++ b/products.html
@@ -47,7 +47,7 @@
 				</div>
 
 				<div class="category-card">
-					<img src="/images/images3.png" alt="Cappuccino" />
+					<img src="/images/image3.png" alt="Cappuccino" />
 					<div class="category-content">
 						<h3>Cappuccino</h3>
 						<a href="#" class="view-more">View More</a>
@@ -89,7 +89,7 @@
 				</div>
 				<div class="category-card">
 					<div class="likes">92 likes</div>
-					<img src="/images/images3.png" alt="Mocha Shake" />
+					<img src="/images/image3.png" alt="Mocha Shake" />
 					<div class="card-content">
 						<h3>Mocha Shake</h3>
 						<div class="price-action">
@@ -138,7 +138,7 @@
 				<!-- Macchiato -->
 				<div class="product-card">
 					<div class="product-image">
-						<img src="/images/images3.png    " alt="Macchiato" />
+						<img src="/images/image3.png    " alt="Macchiato" />
 					</div>
 					<div class="product-info">
 						<h3>Macchiato</h3>
@@ -154,7 +154,7 @@
 				<!-- Espresso -->
 				<div class="product-card">
 					<div class="product-image">
-						<img src="/images/images4.png" alt="Espresso" />
+						<img src="/images/image4.png" alt="Espresso" />
 					</div>
 					<div class="product-info">
 						<h3>Espresso</h3>
