--- a/products.html
+++ b/products.html
@@ -31,7 +31,8 @@
 			</p>
 			<div class="categories-grid">
 				<div class="category-card">
-					<img src="images/image1.png" alt="Coffee Mocha" />
+					<!-- <img src="images/image1.png" alt="Coffee Mocha" /> -->
+					<img src="images/index-heaven.png" alt="Coffee Heaven" />
 					<div class="category-content">
 						<h3>Coffee Mocha</h3>
 						<a href="#" class="view-more">View More</a>
