--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<base href="https://reagan13.github.io/coffee-landing-page/" />
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sign Up - Coffee Shop</title>
